--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -64,14 +64,14 @@ body {
 }
 
 .sider-bar {
-    width: 250px;
-    height: 100%;
-    background-color: #333844;
+    width: 100%;
+    height: 4.2%;
+    background-color: #0a87ce;
     display: flex;
     display: -webkit-flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
-    transition: 0.5s;
+    /*transition: 0.5s;*/
 }
 
 .sider-bar.active {
@@ -79,8 +79,8 @@ body {
 }
 
 .three {
-    background-color: #4A5164;
-    width: 100%;
+    background-color: #0a87ce;
+    width: 10%;
     cursor: pointer;
 }
 
@@ -91,7 +91,7 @@ body {
     left: 45%;
     color: gray;
     height: 35px;
-    transition: 0.5s;
+    /*transition: 0.5s;*/
 }
 
 .sider-bar.active img {
@@ -104,7 +104,7 @@ body {
     flex-direction: row;
     align-items: flex-start;
     align-self: flex-start;
-    background-color: #42495B;
+    background-color: #0a87ce;
     width: 100%;
     height: 40px;
     text-align: center;
@@ -135,7 +135,7 @@ body {
     width: 100px;
     left: 48px;
     height: 11px;
-    background-color: #373D41;
+    background-color: #0a87ce;
     padding: 12px;
     margin: 3px;
     z-index: 10000;
@@ -156,18 +156,30 @@ body {
 
 /* sub */
 .sub {
-    width: 100%;
+    width: 0;
     text-align: center;
-    transition: 0.5s;
+    /*transition: 0.5s;*/
 }
 
 .sub > ul {
     width: 100%;
 }
 
+.sub.active > ul  {
+    width: 0;
+    position:absolute;
+}
+
+
+
 .sub.active > ul > li {
     height: 20px;
+    width: 270px;
     padding-top: 10px;
+    top: 20px;
+    position: relative;
+    z-index: 10;
+    right:270px;
 }
 
 .sub > ul > li {
@@ -175,13 +187,13 @@ body {
     width: 100%;
     color: white;
     font-size: 0.8em;
-    background-color: RGBA(45, 48, 60, 1.00);
+    background-color: #5772a2;
     cursor: pointer;
-    transition: 0.5s;
+    /*transition: 0.5s;*/
 }
 
 .sub > ul > li:hover {
-    background-color: #42495B;
+    background-color: #003366;
 }
 
 .sub > ul > li > a {
@@ -194,12 +206,14 @@ body {
 .sub-container {
     width: 100%;
     height: 100%;
+    position:absolute;
+    top:50px;
 }
 
 #viewDiv {
     padding: 0;
     margin: 10px;
-    height: 40%;
+    height: 100%;
     width: 100%;
     max-width: calc(100% - 202px);
 }
