--- a/views/pageTwo.ejs
+++ b/views/pageTwo.ejs
@@ -270,10 +270,17 @@
     .pageTwo.container > h2 {
         align-self: flex-start;
         color: #0088f5;
-        font-size: 1.2em;
-        margin: 40px;
+        font-size: 5em;
+        margin: 20px;
+        text-indent:30px;
     }
-
+    .pageTwo.container > span{
+        font-size: 2em;
+        margin: 20px 90px;
+        text-indent: 30px;
+        letter-spacing: 1px;
+        line-height: 2;
+    }
     .pageTwo.container.active {
         display: none;
     }
