--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -18,7 +18,8 @@ center, u, b, i {
     vertical-align: baseline
 }
 body {
-    line-height: 1
+    line-height: 1;
+    font-size: 62.5%;
 }
 :focus {
     outline: 0
@@ -65,7 +66,6 @@ body {
 
 .sider-bar {
     width: 100%;
-    height: 4.2%;
     background-color: #0a87ce;
     display: flex;
     display: -webkit-flex;
@@ -174,12 +174,12 @@ body {
 
 .sub.active > ul > li {
     height: 20px;
-    width: 270px;
+    width: 14.7rem;
     padding-top: 10px;
-    top: 20px;
+    top: 1.2rem;
     position: relative;
     z-index: 10;
-    right:270px;
+    right:14.7rem;
 }
 
 .sub > ul > li {
