--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,13 +27,16 @@
                 <div class="sub">
                     <ul>
                         <li>
-                            <a onclick="changePage(1, 1)">在各个区的 分布</a>
+                            <a onclick="changePage(1, 1)">上海文化产业分布图</a>
                         </li>
                         <li>
                             <a onclick="changePage(1, 2)">人民广场分布</a>
                         </li>
                         <li>
                             <a onclick="changePage(1, 3)">文化产业查询</a>
+                        </li>
+                        <li>
+                            <a onclick="changePage(1, 4)">环线文化产业分布图</a>
                         </li>
                     </ul>
                 </div>
@@ -102,16 +105,26 @@
                         <span>最短路计算</span>
                     </div>
                 </div>
+                <div class="item" onmouseover="activeMsg(9)" onmouseout="removeActiveId()" onclick="changePage(9)">
+                    <img src="/images/more.svg" alt="">
+                    <p>环同济经济圈</p>
+                    <div class="aside" id="msg-nine">
+                        <span>环同济经济圈</span>
+                    </div>
+                </div>
             </div>
-            <div class="sub-container" style="height:250%">
+            <div class="sub-container" style="height:170rem">
                 <!--地图-->
                 <%include pageOne.ejs%>
                 <%include pageTwo.ejs%>
                 <%include pageThree.ejs%>
                 <%include pageFour.ejs%>
-                <%include pageFive.ejs%>                
+                <%include pageFive.ejs%>
                 <%include pageEight.ejs%>
                 <%include pageHot.ejs%>
+                <%include pageLoopLine.ejs%>
+                <%include ecoCircle.ejs%>
+                <%include pageSearch.ejs%>
             </div>
         </div>
 
@@ -153,6 +166,8 @@
               $('#msg-six').addClass('active')
             }else if (active && activeId === 7) {
               $('#msg-seven').addClass('active')
+            }else if (active && activeId === 9) {
+                $('#msg-nine').addClass('active')
             }
 
           }
@@ -166,6 +181,7 @@
             $('#msg-five').removeClass('active')
             $('#msg-six').removeClass('active')
             $('#msg-seven').removeClass('active')
+              $('#msg-nine').removeClass('active')
           }
 
 
@@ -192,7 +208,11 @@
                 clearPage();
                 $('.pageThree').removeClass('active');
               }else if (subId === 3) {
-                window.open('/search', '_blank')
+                  clearPage();
+                  $('.pageSearch').removeClass('active');
+              }else if (subId === 4) {
+                  clearPage();
+                  $('.pageLoopLine').removeClass('active');
               }
             }else if (curPage === 2){
               subId = arguments[1];
@@ -227,6 +247,9 @@
             }else if (curPage === 8) {
               clearPage();
               $('.pageEight').removeClass('active');
+            }else if(curPage === 9 ){
+                clearPage();
+                $('.pageecoCircle').removeClass('active');
             }
           }
 
@@ -238,6 +261,9 @@
             $('.pageFive').addClass('active');
             $('.pageEight').addClass('active');
             $('.pageHot').addClass('active');
+            $('.pageLoopLine').addClass('active');
+            $('.pageecoCircle').addClass('active');
+            $('.pageSearch').addClass('active');
           }
 
           function clearMap() {
