--- a/views/pageOne.ejs
+++ b/views/pageOne.ejs
@@ -1,6 +1,7 @@
 <div class="pageOne container">
+    <h2>上海文化产业分布图</h2>
+    <span>下图展示了上海文化产业分布图，颜色越浅代表该区文化创意产业越少，颜色越深代表该区文化创意产业越多，例如浦东新区文化创意产业最多（8120），颜色最深，金山区与崇明县相对较少，颜色最浅。地图下方为图表数据，包括各区县文化产业数量、各区县文化产业在上海所有企业中所占比例以及各区县文化产业在各区中所占比例。</span>
     <div id="viewDiv"></div>
-    <h2></h2>
     <div id="main" style="width: 100%;height:500px;"></div>
     <div id="second" style="width: 100%;height:500px;"></div>
     <div id="third" style="width: 100%;height:500px;"></div>
@@ -279,7 +280,8 @@
     // Create the Map
     var map = new Map({
       basemap: "oceans",
-      ground: "world-elevation"
+      ground: "world-elevation",
+        logo:false
     });
 
     // Create the MapView
@@ -300,7 +302,7 @@
     });
 
     var featureLayer = new FeatureLayer({
-      url: "https://10.60.42.201:6442/arcgis/rest/services/上海文化产业数量分布图/MapServer/0",
+      url: "https://10.60.42.201:6442/arcgis/rest/services/上海文化产业分布/MapServer/0",
       outFields: ["*"],
       popupTemplate: template
     });
@@ -330,10 +332,17 @@
     .pageOne.container > h2 {
         align-self: flex-start;
         color: #0088f5;
-        font-size: 1.2em;
-        margin: 10px;
+        font-size: 5em;
+        margin: 20px;
+        text-indent:30px;
     }
-
+    .pageOne.container > span{
+        font-size: 2em;
+        margin: 20px 90px;
+        text-indent: 30px;
+        letter-spacing: 1px;
+        line-height: 2;
+    }
     .pageOne.container.active {
         display: none;
     }
