--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,11 +5,15 @@
         <link rel="stylesheet" href="/stylesheets/index.css"/>
         <link rel="stylesheet" href="/stylesheets/mscarousel.css"/>
         <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="http://cdn.datatables.net/1.10.12/css/jquery.dataTables.css">
+        <!-- DataTables -->
+        <script type="text/javascript" charset="utf8" src="/javascripts/jquery.dataTables.min.js"></script>
         <script type="text/javascript" src="/javascripts/jquery.msCarousel-min.js"></script>
         <link rel="stylesheet" href="https://js.arcgis.com/4.3/esri/css/main.css">
         <link rel="stylesheet" href="https://js.arcgis.com/4.3/dijit/themes/claro/claro.css">
         <script src="/javascripts/echarts.min.js"></script>
         <script src="https://js.arcgis.com/4.3/"></script>
+
     </head>
     <body>
         <div class="main-container">
