--- a/views/ecoCircle.ejs
+++ b/views/ecoCircle.ejs
@@ -4,6 +4,19 @@
     <span>环同济经济圈扩展区以曲阳路、大连西路-大连路、周家嘴路、黄兴路、邯郸路围合组成，面积约 10 平方公里。</span>
     <span>在此基础上进一步向外扩展，形成四个“辐射点”，包括新江湾城辐射点、森林公园辐射点、黄兴公园辐射点、滨江辐射点。</span>
     <span>综上所述，环同济经济圈覆盖区域如下图。</span>
+    <div class="selectecoCircle" style="right:720px;margin:0">
+        <span class="placeholder">底图选择</span>
+        <ul>
+            <li value="oceans">oceans</li>
+            <li value="gray">gray</li>
+            <li value="national-geographic">national-geographic</li>
+            <li value="hybrid">hybrid</li>
+            <li value="osm">osm</li>
+            <li value="satellite">satellite</li>
+            <li value="streets">streets</li>
+            <li value="topo">topo</li>
+        </ul>
+    </div>
     <div id="viewDivEcoCircle"></div>
     <span>环同济经济圈文化产业数量为522，环同济经济扩展区文化产业数量为861，环同济经济圈辐射点共有2277家文化产业。</span>
     <span>杨浦区的文化产业数量为3317，环同济经济圈文化产业数量为522，因此环同济经济圈内的文化产业占杨浦区文化产业比例为15.737%</span>
@@ -178,6 +191,88 @@
         ]
     };
     Ecocirlce.setOption(option);
+
+    var basemap = "";
+    $('.selectecoCircle').on('click', '.placeholder', function(e) {
+        var parent = $(this).closest('.selectecoCircle');
+        if (!parent.hasClass('is-open')) {
+            parent.addClass('is-open');
+            $('.selectecoCircle.is-open').not(parent).removeClass('is-open');
+        } else {
+            parent.removeClass('is-open');
+        }
+        e.stopPropagation();
+    }).on('click', 'ul>li', function() {
+        var parent = $(this).closest('.selectecoCircle');
+        parent.removeClass('is-open').find('.placeholder').text($(this).text());
+        basemap = this.attributes[0].value;
+
+        require([
+            "esri/Map",
+            "esri/views/SceneView",
+            "esri/layers/FeatureLayer",
+            "dojo/domReady!"
+        ], function(Map, SceneView, FeatureLayer){
+            var template = {
+                title: "文化产业区域信息：",
+                content: "<p>{Name}</p>" + "一共有{Join_Count}个文化产业",
+                fieldInfos: [{
+                    fieldName: "MARRIED_CY",
+                    format: {
+                        digitSeparator: true, // Use a comma separator for large numbers
+                        places: 0 // Sets the number of decimal places to 0 and rounds up
+                    }
+                }, {
+                    fieldName: "NEVMARR_CY",
+                    format: {
+                        digitSeparator: true,
+                        places: 0
+                    }
+                }, {
+                    fieldName: "DIVORCD_CY",
+                    format: {
+                        digitSeparator: true,
+                        places: 0
+                    }
+                }]
+            };
+
+            // Create the Map
+            var map = new Map({
+                basemap: basemap,
+                ground: "world-elevation",
+                logo:false
+            });
+
+            // Create the MapView
+            var view = new SceneView({
+                container: "viewDivEcoCircle",
+                map: map,
+                zoom: 12,  // Sets the zoom level based on level of detail (LOD)
+                center: [121, 31]  // Sets the center point of view in lon/lat
+            });
+
+            var featureLayer = new FeatureLayer({
+                url: "https://10.60.42.201:6442/arcgis/rest/services/环同济经济圈/MapServer/1",
+                outFields: ["*"],
+                popupTemplate: template
+            });
+
+            view.then(function() {
+                featureLayer.then(function() {
+                    view.goTo(featureLayer.fullExtent);
+                });
+
+            });
+
+            map.add(featureLayer)
+
+        });
+    })
+
+
+
+
     require([
         "esri/Map",
         "esri/views/SceneView",
@@ -219,11 +314,8 @@
         var view = new SceneView({
             container: "viewDivEcoCircle",
             map: map,
-            camera: {
-                position: [-74.0338, 40.6913, 707],
-                tilt: 40,
-                heading: 50
-            }
+            zoom: 12,  // Sets the zoom level based on level of detail (LOD)
+            center: [121, 31]  // Sets the center point of view in lon/lat
         });
 
         var featureLayer = new FeatureLayer({
@@ -301,5 +393,17 @@
     .pageecoCircle.container.active {
         display: none;
     }
-
+    .selectecoCircle { position: relative; display: block; margin: 0 auto; width: 10%; max-width: 325px; color: #cccccc; vertical-align: middle; text-align: left; user-select: none; -webkit-touch-callout: none;}
+    .selectecoCircle .placeholder { position: relative; display: block; background-color: #393d41; z-index: 1; padding: 1em; border-radius: 2px; cursor: pointer;}
+    .selectecoCircle .placeholder:hover { background: #34383c;}
+    .selectecoCircle .placeholder:after { position: absolute; right: 1em; top: 50%; transform: translateY(-50%); font-family: 'FontAwesome'; content: '\f078'; z-index: 10;}
+    .selectecoCircle.is-open .placeholder:after { content: '\f077';}
+    .selectecoCircle.is-open ul { display: block;}
+    .selectecoCircle.selectecoCircle--white .placeholder { background: #fff; color: #999;}
+    .selectecoCircle.selectecoCircle--white .placeholder:hover { background: #fafafa;}
+    .selectecoCircle.selectecoCircle--green .placeholder { background: #5BF36E; color: #FFF;}
+    .selectecoCircle.selectecoCircle--green .placeholder:hover { background: #5BF36E;}
+    .selectecoCircle ul { display: none; position: absolute; overflow: hidden; width: 100%; background: #fff; border-radius: 2px; top: 100%; left: 0; list-style: none; margin: 5px 0 0 0; padding: 0; z-index: 100;}
+    .selectecoCircle ul li { display: block; text-align: left; padding: 0.8em 1em 0.8em 1em; color: #999; cursor: pointer;}
+    .selectecoCircle ul li:hover { background: #4ebbf0; color: #fff;}
 </style>
