--- a/views/pageAnylysis.ejs
+++ b/views/pageAnylysis.ejs
@@ -71,6 +71,19 @@
             outline: none;
             height: 25px;
         }
+        .selectAnylysis { position: relative; display: block; margin: 0 auto; width: 10%; max-width: 325px; color: #cccccc; vertical-align: middle; text-align: left; user-select: none; -webkit-touch-callout: none;}
+        .selectAnylysis .placeholder { position: relative; display: block; background-color: #393d41; z-index: 1; padding: 1em; border-radius: 2px; cursor: pointer;}
+        .selectAnylysis .placeholder:hover { background: #34383c;}
+        .selectAnylysis .placeholder:after { position: absolute; right: 1em; top: 50%; transform: translateY(-50%); font-family: 'FontAwesome'; content: '\f078'; z-index: 10;}
+        .selectAnylysis.is-open .placeholder:after { content: '\f077';}
+        .selectAnylysis.is-open ul { display: block;}
+        .selectAnylysis.selectAnylysis--white .placeholder { background: #fff; color: #999;}
+        .selectAnylysis.selectAnylysis--white .placeholder:hover { background: #fafafa;}
+        .selectAnylysis.selectAnylysis--green .placeholder { background: #5BF36E; color: #FFF;}
+        .selectAnylysis.selectAnylysis--green .placeholder:hover { background: #5BF36E;}
+        .selectAnylysis ul { display: none; position: absolute; overflow: hidden; width: 100%; background: #fff; border-radius: 2px; top: 100%; left: 0; list-style: none; margin: 5px 0 0 0; padding: 0; z-index: 100;}
+        .selectAnylysis ul li { display: block; text-align: left; padding: 0.8em 1em 0.8em 1em; color: #999; cursor: pointer;}
+        .selectAnylysis ul li:hover { background: #4ebbf0; color: #fff;}
     </style>
 
     <link rel="stylesheet" href="https://js.arcgis.com/4.3/esri/themes/dark/main.css">
@@ -195,6 +208,19 @@
 </head>
 
 <body class="tundra">
+<div class="selectAnylysis" style="right:720px;margin:0">
+    <span class="placeholder">底图选择</span>
+    <ul>
+        <li value="oceans">oceans</li>
+        <li value="gray">gray</li>
+        <li value="national-geographic">national-geographic</li>
+        <li value="hybrid">hybrid</li>
+        <li value="osm">osm</li>
+        <li value="satellite">satellite</li>
+        <li value="streets">streets</li>
+        <li value="topo">topo</li>
+    </ul>
+</div>
 <div id="viewDiv">
     <div id="sidebar">
         <div id="text">
