--- a/views/pageHot.ejs
+++ b/views/pageHot.ejs
@@ -1,9 +1,107 @@
 <div class="pageHot container active">
     <h2>文化产业在各个区的热点</h2>
+    <div class="selectHout" style="right:720px;margin:0">
+        <span class="placeholder">底图选择</span>
+        <ul>
+            <li value="oceans">oceans</li>
+            <li value="gray">gray</li>
+            <li value="national-geographic">national-geographic</li>
+            <li value="hybrid">hybrid</li>
+            <li value="osm">osm</li>
+            <li value="satellite">satellite</li>
+            <li value="streets">streets</li>
+            <li value="topo">topo</li>
+        </ul>
+    </div>
     <div id="viewDivHot"></div>
 </div>
 
 <script>
+    var basemap = "";
+    $('.selectHout').on('click', '.placeholder', function(e) {
+        var parent = $(this).closest('.selectHout');
+        if (!parent.hasClass('is-open')) {
+            parent.addClass('is-open');
+            $('.selectHout.is-open').not(parent).removeClass('is-open');
+        } else {
+            parent.removeClass('is-open');
+        }
+        e.stopPropagation();
+    }).on('click', 'ul>li', function() {
+        var parent = $(this).closest('.selectHout');
+        parent.removeClass('is-open').find('.placeholder').text($(this).text());
+        basemap = this.attributes[0].value;
+
+        require([
+            "esri/Map",
+            "esri/views/SceneView",
+            "esri/layers/FeatureLayer",
+            "esri/widgets/Search",
+            "dojo/domReady!"
+        ], function(Map, SceneView, FeatureLayer, Search){
+            var template = {
+                title: "文化产业热点信息：",
+                content: "<p>{NAMEC}</p>" + "一共有{Join_Count}个文化产业",
+                fieldInfos: [{
+                    fieldName: "MARRIED_CY",
+                    format: {
+                        digitSeparator: true, // Use a comma separator for large numbers
+                        places: 0 // Sets the number of decimal places to 0 and rounds up
+                    }
+                }, {
+                    fieldName: "NEVMARR_CY",
+                    format: {
+                        digitSeparator: true,
+                        places: 0
+                    }
+                }, {
+                    fieldName: "DIVORCD_CY",
+                    format: {
+                        digitSeparator: true,
+                        places: 0
+                    }
+                }]
+            };
+
+            // Create the Map
+            var map = new Map({
+                basemap: basemap,
+                ground: "world-elevation"
+            });
+
+            // Create the MapView
+            var view = new SceneView({
+                container: "viewDivHot",
+                map: map,
+                zoom: 12,  // Sets the zoom level based on level of detail (LOD)
+                center: [121, 31]  // Sets the center point of view in lon/lat
+            });
+
+            view.then(function() {
+                featureLayer.then(function() {
+                    view.goTo(featureLayer.fullExtent);
+                });
+            });
+
+            var searchWidget = new Search({
+                view: view
+            });
+
+            view.ui.add(searchWidget, {
+                position: "top-right",
+                index: 0
+            });
+
+            var featureLayer = new FeatureLayer({
+                url: "https://10.60.42.201:6442/arcgis/rest/services/AreaCount/MapServer/0",
+                outFields: ["*"],
+                popupTemplate: template
+            });
+
+            map.add(featureLayer)
+
+        });
+    })
   require([
     "esri/Map",
     "esri/views/SceneView",
@@ -45,11 +143,8 @@
     var view = new SceneView({
       container: "viewDivHot",
       map: map,
-      camera: {
-        position: [-74.0338, 40.6913, 707],
-        tilt: 40,
-        heading: 50
-      }
+        zoom: 12,  // Sets the zoom level based on level of detail (LOD)
+        center: [121, 31]  // Sets the center point of view in lon/lat
     });
 
     view.then(function() {
@@ -114,4 +209,17 @@
     #viewDivHot.active {
         display: none;
     }
+    .selectHout { position: relative; display: block; margin: 0 auto; width: 10%; max-width: 325px; color: #cccccc; vertical-align: middle; text-align: left; user-select: none; -webkit-touch-callout: none;}
+    .selectHout .placeholder { position: relative; display: block; background-color: #393d41; z-index: 1; padding: 1em; border-radius: 2px; cursor: pointer;}
+    .selectHout .placeholder:hover { background: #34383c;}
+    .selectHout .placeholder:after { position: absolute; right: 1em; top: 50%; transform: translateY(-50%); font-family: 'FontAwesome'; content: '\f078'; z-index: 10;}
+    .selectHout.is-open .placeholder:after { content: '\f077';}
+    .selectHout.is-open ul { display: block;}
+    .selectHout.selectHout--white .placeholder { background: #fff; color: #999;}
+    .selectHout.selectHout--white .placeholder:hover { background: #fafafa;}
+    .selectHout.selectHout--green .placeholder { background: #5BF36E; color: #FFF;}
+    .selectHout.selectHout--green .placeholder:hover { background: #5BF36E;}
+    .selectHout ul { display: none; position: absolute; overflow: hidden; width: 100%; background: #fff; border-radius: 2px; top: 100%; left: 0; list-style: none; margin: 5px 0 0 0; padding: 0; z-index: 100;}
+    .selectHout ul li { display: block; text-align: left; padding: 0.8em 1em 0.8em 1em; color: #999; cursor: pointer;}
+    .selectHout ul li:hover { background: #4ebbf0; color: #fff;}
 </style>
