--- a/views/pageOne.ejs
+++ b/views/pageOne.ejs
@@ -1,13 +1,105 @@
 <div class="pageOne container">
     <h2>上海文化产业分布图</h2>
     <span>下图展示了上海文化产业分布图，颜色越浅代表该区文化创意产业越少，颜色越深代表该区文化创意产业越多，例如浦东新区文化创意产业最多（8120），颜色最深，金山区与崇明县相对较少，颜色最浅。地图下方为图表数据，包括各区县文化产业数量、各区县文化产业在上海所有企业中所占比例以及各区县文化产业在各区中所占比例。</span>
+
+    <div class="selectOne" style="right:720px;margin:0">
+        <span class="placeholder">底图选择</span>
+        <ul>
+            <li value="oceans">oceans</li>
+            <li value="gray">gray</li>
+            <li value="national-geographic">national-geographic</li>
+            <li value="hybrid">hybrid</li>
+            <li value="osm">osm</li>
+            <li value="satellite">satellite</li>
+            <li value="streets">streets</li>
+            <li value="topo">topo</li>
+        </ul>
+    </div>
+
     <div id="viewDiv"></div>
     <div id="main" style="width: 100%;height:500px;"></div>
     <div id="second" style="width: 100%;height:500px;"></div>
     <div id="third" style="width: 100%;height:500px;"></div>
 </div>
 <script>
-    var posList = [
+    var basemap = "";
+    $('.selectOne').on('click', '.placeholder', function(e) {
+        var parent = $(this).closest('.selectOne');
+        if (!parent.hasClass('is-open')) {
+            parent.addClass('is-open');
+            $('.selectOne.is-open').not(parent).removeClass('is-open');
+        } else {
+            parent.removeClass('is-open');
+        }
+        e.stopPropagation();
+    }).on('click', 'ul>li', function() {
+        var parent = $(this).closest('.selectOne');
+        parent.removeClass('is-open').find('.placeholder').text($(this).text());
+        basemap = this.attributes[0].value;
+
+        require([
+            "esri/Map",
+            "esri/views/SceneView",
+            "esri/layers/FeatureLayer",
+            "esri/widgets/BasemapToggle",
+            "dojo/domReady!"
+        ], function(Map, SceneView, FeatureLayer,BasemapToggle){
+
+            var template = {
+                title: "文化产业区域信息：",
+                content: "<p>{Name}</p>" + "一共有{Join_Count}个文化产业",
+                fieldInfos: [{
+                    fieldName: "MARRIED_CY",
+                    format: {
+                        digitSeparator: true, // Use a comma separator for large numbers
+                        places: 0 // Sets the number of decimal places to 0 and rounds up
+                    }
+                }, {
+                    fieldName: "NEVMARR_CY",
+                    format: {
+                        digitSeparator: true,
+                        places: 0
+                    }
+                }, {
+                    fieldName: "DIVORCD_CY",
+                    format: {
+                        digitSeparator: true,
+                        places: 0
+                    }
+                }]
+            };
+
+            // Create the Map
+            var map = new Map({
+                basemap: basemap,
+                ground: "world-elevation",
+                logo:false
+            });
+
+            // Create the MapView
+            var view = new SceneView({
+                container: "viewDiv",
+                map: map,
+                zoom: 12,  // Sets the zoom level based on level of detail (LOD)
+                center: [121, 31]  // Sets the center point of view in lon/lat
+            });
+            view.then(function() {
+                featureLayer.then(function() {
+                    view.goTo(featureLayer.fullExtent);
+                });
+            });
+
+            var featureLayer = new FeatureLayer({
+                url: "https://10.60.42.201:6442/arcgis/rest/services/上海文化产业分布/MapServer/0",
+                outFields: ["*"],
+                popupTemplate: template
+            });
+
+            map.add(featureLayer)
+        });
+    });
+
+        var posList = [
         'left', 'right', 'top', 'bottom',
         'inside',
         'insideTop', 'insideLeft', 'insideRight', 'insideBottom',
@@ -253,7 +345,7 @@
     "esri/layers/FeatureLayer",
     "dojo/domReady!"
   ], function(Map, SceneView, FeatureLayer){
-    var template = {
+      var template = {
       title: "文化产业区域信息：",
       content: "<p>{Name}</p>" + "一共有{Join_Count}个文化产业",
       fieldInfos: [{
@@ -279,7 +371,7 @@
 
     // Create the Map
     var map = new Map({
-      basemap: "oceans",
+      basemap: "satellite",
       ground: "world-elevation",
         logo:false
     });
@@ -288,11 +380,8 @@
     var view = new SceneView({
       container: "viewDiv",
       map: map,
-      camera: {
-        position: [-74.0338, 40.6913, 707],
-        tilt: 40,
-        heading: 50
-      }
+        zoom: 12,  // Sets the zoom level based on level of detail (LOD)
+        center: [121, 31]  // Sets the center point of view in lon/lat
     });
 
     view.then(function() {
@@ -347,4 +436,17 @@
         display: none;
     }
 
+    .selectOne { position: relative; display: block; margin: 0 auto; width: 10%; max-width: 325px; color: #cccccc; vertical-align: middle; text-align: left; user-select: none; -webkit-touch-callout: none;}
+    .selectOne .placeholder { position: relative; display: block; background-color: #393d41; z-index: 1; padding: 1em; border-radius: 2px; cursor: pointer;}
+    .selectOne .placeholder:hover { background: #34383c;}
+    .selectOne .placeholder:after { position: absolute; right: 1em; top: 50%; transform: translateY(-50%); font-family: 'FontAwesome'; content: '\f078'; z-index: 10;}
+    .selectOne.is-open .placeholder:after { content: '\f077';}
+    .selectOne.is-open ul { display: block;}
+    .selectOne.selectOne--white .placeholder { background: #fff; color: #999;}
+    .selectOne.selectOne--white .placeholder:hover { background: #fafafa;}
+    .selectOne.selectOne--green .placeholder { background: #5BF36E; color: #FFF;}
+    .selectOne.selectOne--green .placeholder:hover { background: #5BF36E;}
+    .selectOne ul { display: none; position: absolute; overflow: hidden; width: 100%; background: #fff; border-radius: 2px; top: 100%; left: 0; list-style: none; margin: 5px 0 0 0; padding: 0; z-index: 100;}
+    .selectOne ul li { display: block; text-align: left; padding: 0.8em 1em 0.8em 1em; color: #999; cursor: pointer;}
+    .selectOne ul li:hover { background: #4ebbf0; color: #fff;}
 </style>
