--- a/views/pageThree.ejs
+++ b/views/pageThree.ejs
@@ -1,4 +1,17 @@
 <div class="pageThree container active">
+    <div class="selectThree" style="right:720px;margin:0">
+        <span class="placeholder">底图选择</span>
+        <ul>
+            <li value="oceans">oceans</li>
+            <li value="gray">gray</li>
+            <li value="national-geographic">national-geographic</li>
+            <li value="hybrid">hybrid</li>
+            <li value="osm">osm</li>
+            <li value="satellite">satellite</li>
+            <li value="streets">streets</li>
+            <li value="topo">topo</li>
+        </ul>
+    </div>
     <div id="viewDiv3"></div>
     <div class="mainGallery">
         <table border="0" cellspacing="0" cellpadding="0" class="bigtable">
@@ -328,7 +341,77 @@
     oBigController.goto(parseInt(counter));
 
   })
+  var basemap = "";
+  $('.selectThree').on('click', '.placeholder', function(e) {
+      var parent = $(this).closest('.selectThree');
+      if (!parent.hasClass('is-open')) {
+          parent.addClass('is-open');
+          $('.selectThree.is-open').not(parent).removeClass('is-open');
+      } else {
+          parent.removeClass('is-open');
+      }
+      e.stopPropagation();
+  }).on('click', 'ul>li', function() {
+      var parent = $(this).closest('.selectThree');
+      parent.removeClass('is-open').find('.placeholder').text($(this).text());
+      basemap = this.attributes[0].value;
+      require([
+          "esri/Map",
+          "esri/views/SceneView",
+          "esri/layers/FeatureLayer",
+          "dojo/domReady!"
+      ], function(Map, SceneView, FeatureLayer){
+          var template = {
+              title: "热点分析：",
+              content: "<p>{Name}</p>共{Join_Count}个文化产业",
+              fieldInfos: [{
+                  fieldName: "MARRIED_CY",
+                  format: {
+                      digitSeparator: true, // Use a comma separator for large numbers
+                      places: 0 // Sets the number of decimal places to 0 and rounds up
+                  }
+              }, {
+                  fieldName: "NEVMARR_CY",
+                  format: {
+                      digitSeparator: true,
+                      places: 0
+                  }
+              }, {
+                  fieldName: "DIVORCD_CY",
+                  format: {
+                      digitSeparator: true,
+                      places: 0
+                  }
+              }]
+          };
 
+          // Create the Map
+          var map = new Map({
+              basemap: basemap,
+              ground: "world-elevation"
+          });
+
+          // Create the MapView
+          var view = new SceneView({
+              container: "viewDiv3",
+              map: map,
+              zoom: 12,  // Sets the zoom level based on level of detail (LOD)
+              center: [121, 31]  // Sets the center point of view in lon/lat
+          });
+
+          var featureLayer = new FeatureLayer({
+              url: "https://10.60.42.201:6442/arcgis/rest/services/culture_poi/MapServer/1",
+              outFields: ["*"],
+              popupTemplate: template
+          });
+          view.then(function() {
+              featureLayer.then(function() {
+                  view.goTo(featureLayer.fullExtent);
+              });
+          });
+          map.add(featureLayer)
+      });
+  })
 
   require([
     "esri/Map",
@@ -370,11 +453,8 @@
     var view = new SceneView({
       container: "viewDiv3",
       map: map,
-      camera: {
-        position: [-74.0338, 40.6913, 707],
-        tilt: 40,
-        heading: 50
-      }
+        zoom: 12,  // Sets the zoom level based on level of detail (LOD)
+        center: [121, 31]  // Sets the center point of view in lon/lat
     });
 
     var featureLayer = new FeatureLayer({
@@ -713,5 +793,18 @@
     .mstoplinks a.active, .mstoplinks a.active:visited{color:#003366; text-decoration:none; border-right:1px solid #c3c3c3; padding:0 10px;border-bottom:1px solid #c3c3c3; border-left:1px solid #c3c3c3; }
 
     .version{font-size:12px; color:#EE3C95;}
+    .selectThree { position: relative; display: block; margin: 0 auto; width: 10%; max-width: 325px; color: #cccccc; vertical-align: middle; text-align: left; user-select: none; -webkit-touch-callout: none;}
+    .selectThree .placeholder { position: relative; display: block; background-color: #393d41; z-index: 1; padding: 1em; border-radius: 2px; cursor: pointer;}
+    .selectThree .placeholder:hover { background: #34383c;}
+    .selectThree .placeholder:after { position: absolute; right: 1em; top: 50%; transform: translateY(-50%); font-family: 'FontAwesome'; content: '\f078'; z-index: 10;}
+    .selectThree.is-open .placeholder:after { content: '\f077';}
+    .selectThree.is-open ul { display: block;}
+    .selectThree.selectThree--white .placeholder { background: #fff; color: #999;}
+    .selectThree.selectThree--white .placeholder:hover { background: #fafafa;}
+    .selectThree.selectThree--green .placeholder { background: #5BF36E; color: #FFF;}
+    .selectThree.selectThree--green .placeholder:hover { background: #5BF36E;}
+    .selectThree ul { display: none; position: absolute; overflow: hidden; width: 100%; background: #fff; border-radius: 2px; top: 100%; left: 0; list-style: none; margin: 5px 0 0 0; padding: 0; z-index: 100;}
+    .selectThree ul li { display: block; text-align: left; padding: 0.8em 1em 0.8em 1em; color: #999; cursor: pointer;}
+    . ul li:hover { background: #4ebbf0; color: #fff;}
 </style>
 
