--- a/views/pageTwo.ejs
+++ b/views/pageTwo.ejs
@@ -1,5 +1,17 @@
 <div class="pageTwo container active">
-
+    <div class="selectTwo" style="right:720px;margin:0">
+        <span class="placeholder">底图选择</span>
+        <ul>
+            <li value="oceans">oceans</li>
+            <li value="gray">gray</li>
+            <li value="national-geographic">national-geographic</li>
+            <li value="hybrid">hybrid</li>
+            <li value="osm">osm</li>
+            <li value="satellite">satellite</li>
+            <li value="streets">streets</li>
+            <li value="topo">topo</li>
+        </ul>
+    </div>
     <div class="map-container-two active" id="2-1">
         <div id="viewDiv2-1"></div>
     </div>
@@ -68,7 +80,195 @@
   };
   myChart1.setOption(option1);
 
+  var basemap = "";
+  $('.selectTwo').on('click', '.placeholder', function(e) {
+      var parent = $(this).closest('.selectTwo');
+      if (!parent.hasClass('is-open')) {
+          parent.addClass('is-open');
+          $('.selectTwo.is-open').not(parent).removeClass('is-open');
+      } else {
+          parent.removeClass('is-open');
+      }
+      e.stopPropagation();
+  }).on('click', 'ul>li', function() {
+      var parent = $(this).closest('.selectTwo');
+      parent.removeClass('is-open').find('.placeholder').text($(this).text());
+      basemap = this.attributes[0].value;
+      require([
+          "esri/Map",
+          "esri/views/SceneView",
+          "esri/layers/FeatureLayer",
+          "dojo/domReady!"
+      ], function(Map, SceneView, FeatureLayer){
+          var template = {
+              title: "文化历史区域信息：",
+              content: "<p>{区县级行政区划.Name} 有形</p>" + "{history.csv.有形}",
+              fieldInfos: [{
+                  fieldName: "MARRIED_CY",
+                  format: {
+                      digitSeparator: true, // Use a comma separator for large numbers
+                      places: 0 // Sets the number of decimal places to 0 and rounds up
+                  }
+              }, {
+                  fieldName: "NEVMARR_CY",
+                  format: {
+                      digitSeparator: true,
+                      places: 0
+                  }
+              }, {
+                  fieldName: "DIVORCD_CY",
+                  format: {
+                      digitSeparator: true,
+                      places: 0
+                  }
+              }]
+          };
 
+          // Create the Map
+          var map = new Map({
+              basemap: basemap,
+              ground: "world-elevation"
+          });
+
+          // Create the MapView
+          var view = new SceneView({
+              container: "viewDiv2-1",
+              map: map,
+              zoom: 12,  // Sets the zoom level based on level of detail (LOD)
+              center: [121, 31]  // Sets the center point of view in lon/lat
+          });
+
+          var featureLayer = new FeatureLayer({
+              url: "https://10.60.42.201:6442/arcgis/rest/services/History/MapServer/0",
+              outFields: ["*"],
+              popupTemplate: template
+          });
+
+          view.then(function() {
+              featureLayer.then(function() {
+                  view.goTo(featureLayer.fullExtent);
+              });
+          });
+          map.add(featureLayer)
+      });
+
+      require([
+          "esri/Map",
+          "esri/views/SceneView",
+          "esri/layers/FeatureLayer",
+          "dojo/domReady!"
+      ], function(Map, SceneView, FeatureLayer){
+          var template = {
+              title: "文化历史区域信息：",
+              content: "<p>{区县级行政区划.Name} 无形</p>" + "{history.csv.无形}",
+              fieldInfos: [{
+                  fieldName: "MARRIED_CY",
+                  format: {
+                      digitSeparator: true, // Use a comma separator for large numbers
+                      places: 0 // Sets the number of decimal places to 0 and rounds up
+                  }
+              }, {
+                  fieldName: "NEVMARR_CY",
+                  format: {
+                      digitSeparator: true,
+                      places: 0
+                  }
+              }, {
+                  fieldName: "DIVORCD_CY",
+                  format: {
+                      digitSeparator: true,
+                      places: 0
+                  }
+              }]
+          };
+
+          // Create the Map
+          var map = new Map({
+              basemap: basemap,
+              ground: "world-elevation"
+          });
+
+          // Create the MapView
+          var view = new SceneView({
+              container: "viewDiv2-2",
+              map: map,
+              zoom: 12,  // Sets the zoom level based on level of detail (LOD)
+              center: [121, 31]  // Sets the center point of view in lon/lat
+          });
+
+          var featureLayer = new FeatureLayer({
+              url: "https://192.168.1.50:6442/arcgis/rest/services/History/MapServer/1",
+              outFields: ["*"],
+              popupTemplate: template
+          });
+
+          view.then(function() {
+              featureLayer.then(function() {
+                  view.goTo(featureLayer.fullExtent);
+              });
+          });
+          map.add(featureLayer)
+      });
+
+      require([
+          "esri/Map",
+          "esri/views/SceneView",
+          "esri/layers/FeatureLayer",
+          "dojo/domReady!"
+      ], function(Map, SceneView, FeatureLayer){
+          var template = {
+              title: "文化历史区域信息：",
+              content: "<p>{区县级行政区划.Name} 产业</p>" + "{history.csv.产业}",
+              fieldInfos: [{
+                  fieldName: "MARRIED_CY",
+                  format: {
+                      digitSeparator: true, // Use a comma separator for large numbers
+                      places: 0 // Sets the number of decimal places to 0 and rounds up
+                  }
+              }, {
+                  fieldName: "NEVMARR_CY",
+                  format: {
+                      digitSeparator: true,
+                      places: 0
+                  }
+              }, {
+                  fieldName: "DIVORCD_CY",
+                  format: {
+                      digitSeparator: true,
+                      places: 0
+                  }
+              }]
+          };
+
+          // Create the Map
+          var map = new Map({
+              basemap: basemap,
+              ground: "world-elevation"
+          });
+
+          // Create the MapView
+          var view = new SceneView({
+              container: "viewDiv2-3",
+              map: map,
+              zoom: 12,  // Sets the zoom level based on level of detail (LOD)
+              center: [121, 31]  // Sets the center point of view in lon/lat
+          });
+
+          var featureLayer = new FeatureLayer({
+              url: "https://192.168.1.50:6442/arcgis/rest/services/History/MapServer/2",
+              outFields: ["*"],
+              popupTemplate: template
+          });
+
+          view.then(function() {
+              featureLayer.then(function() {
+                  view.goTo(featureLayer.fullExtent);
+              });
+          });
+          map.add(featureLayer)
+      });
+
+  })
   require([
     "esri/Map",
     "esri/views/SceneView",
@@ -109,11 +309,8 @@
     var view = new SceneView({
       container: "viewDiv2-1",
       map: map,
-      camera: {
-        position: [-74.0338, 40.6913, 707],
-        tilt: 40,
-        heading: 50
-      }
+        zoom: 12,  // Sets the zoom level based on level of detail (LOD)
+        center: [121, 31]  // Sets the center point of view in lon/lat
     });
 
     var featureLayer = new FeatureLayer({
@@ -170,11 +367,8 @@
     var view = new SceneView({
       container: "viewDiv2-2",
       map: map,
-      camera: {
-        position: [-74.0338, 40.6913, 707],
-        tilt: 40,
-        heading: 50
-      }
+        zoom: 12,  // Sets the zoom level based on level of detail (LOD)
+        center: [121, 31]  // Sets the center point of view in lon/lat
     });
 
     var featureLayer = new FeatureLayer({
@@ -231,11 +425,8 @@
     var view = new SceneView({
       container: "viewDiv2-3",
       map: map,
-      camera: {
-        position: [-74.0338, 40.6913, 707],
-        tilt: 40,
-        heading: 50
-      }
+        zoom: 12,  // Sets the zoom level based on level of detail (LOD)
+        center: [121, 31]  // Sets the center point of view in lon/lat
     });
 
     var featureLayer = new FeatureLayer({
@@ -255,6 +446,19 @@
 </script>
 
 <style>
+    .selectTwo { position: relative; display: block; margin: 0 auto; width: 10%; max-width: 325px; color: #cccccc; vertical-align: middle; text-align: left; user-select: none; -webkit-touch-callout: none;}
+    .selectTwo .placeholder { position: relative; display: block; background-color: #393d41; z-index: 1; padding: 1em; border-radius: 2px; cursor: pointer;}
+    .selectTwo .placeholder:hover { background: #34383c;}
+    .selectTwo .placeholder:after { position: absolute; right: 1em; top: 50%; transform: translateY(-50%); font-family: 'FontAwesome'; content: '\f078'; z-index: 10;}
+    .selectTwo.is-open .placeholder:after { content: '\f077';}
+    .selectTwo.is-open ul { display: block;}
+    .selectTwo.selectTwo--white .placeholder { background: #fff; color: #999;}
+    .selectTwo.selectTwo--white .placeholder:hover { background: #fafafa;}
+    .selectTwo.selectTwo--green .placeholder { background: #5BF36E; color: #FFF;}
+    .selectTwo.selectTwo--green .placeholder:hover { background: #5BF36E;}
+    .selectTwo ul { display: none; position: absolute; overflow: hidden; width: 100%; background: #fff; border-radius: 2px; top: 100%; left: 0; list-style: none; margin: 5px 0 0 0; padding: 0; z-index: 100;}
+    .selectTwo ul li { display: block; text-align: left; padding: 0.8em 1em 0.8em 1em; color: #999; cursor: pointer;}
+    .selectTwo ul li:hover { background: #4ebbf0; color: #fff;}
     .pageTwo.container {
         display: flex;
         display: -webkit-flex;
