--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
     <head>
         <title><%=title %></title>
         <link rel="stylesheet" href="/stylesheets/index.css"/>
+        <link rel="stylesheet" href="/stylesheets/button.css"/>
         <link rel="stylesheet" href="/stylesheets/mscarousel.css"/>
         <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
         <link rel="stylesheet" type="text/css" href="http://cdn.datatables.net/1.10.12/css/jquery.dataTables.css">
