--- a/views/pageSearch.ejs
+++ b/views/pageSearch.ejs
@@ -3,7 +3,7 @@
     <br>
     <span> 输入名字进行查找</span>
     <input type="text" id="inputTxt" size="40" value="希蒙广告艺术装饰中心" />
-    <input type="button" value="搜索" id="findBtn" />
+    <a class="button button-glow button-border button-rounded button-primary" id="findBtn">搜索</a>
     <br>
     <br>
     <div class="table">
