--- a/views/index.ejs
+++ b/views/index.ejs
@@ -53,14 +53,9 @@
                 </div>
                 <div class="sub">
                     <ul>
+
                         <li>
-                            <a onclick="changePage(2, 1)">有形</a>
-                        </li>
-                        <li>
-                            <a onclick="changePage(2, 2)">无形</a>
-                        </li>
-                        <li>
-                            <a onclick="changePage(2, 3)">产业</a>
+                            <a onclick="changePage(2, 3)">历史对比</a>
                         </li>
                     </ul>
                 </div>
