--- a/views/pageEight.ejs
+++ b/views/pageEight.ejs
@@ -57,7 +57,7 @@
 
             // Point the URL to a valid route service
             var routeTask = new RouteTask({
-                url: "https://10.60.42.201:6442/arcgis/rest/services/ShanghaiMap/NAServer/路径"
+                url: "https://localhost:6443/arcgis/rest/services/ShanghaiMap/NAServer/路径"
             });
 
             // The stops and route result will be stored in this layer
@@ -151,7 +151,7 @@
 
       // Point the URL to a valid route service
       var routeTask = new RouteTask({
-        url: "https://10.60.42.201:6442/arcgis/rest/services/ShanghaiMap/NAServer/路径"
+        url: "https://localhost:6443/arcgis/rest/services/ShanghaiMap/NAServer/路径"
       });
 
       // The stops and route result will be stored in this layer
