--- a/views/pageLoopLine.ejs
+++ b/views/pageLoopLine.ejs
@@ -82,7 +82,7 @@
             });
 
             var featureLayer = new FeatureLayer({
-                url: "https://10.60.42.201:6442/arcgis/rest/services/环线文化产业分布图/MapServer/1",
+                url: "https://localhost:6443/arcgis/rest/services/环线文化产业分布图/MapServer/1",
                 outFields: ["*"],
                 popupTemplate: template
             });
@@ -184,7 +184,7 @@
         });
 
         var featureLayer = new FeatureLayer({
-            url: "https://10.60.42.201:6442/arcgis/rest/services/环线文化产业分布图/MapServer/1",
+            url: "https://localhost:6443/arcgis/rest/services/环线文化产业分布图/MapServer/1",
             outFields: ["*"],
             popupTemplate: template
         });
