--- a/views/pageOne.ejs
+++ b/views/pageOne.ejs
@@ -90,7 +90,7 @@
             });
 
             var featureLayer = new FeatureLayer({
-                url: "https://10.60.42.201:6442/arcgis/rest/services/上海文化产业分布/MapServer/0",
+                url: "https://localhost:6443/arcgis/rest/services/上海文化产业分布/MapServer/0",
                 outFields: ["*"],
                 popupTemplate: template
             });
@@ -391,7 +391,7 @@
     });
 
     var featureLayer = new FeatureLayer({
-      url: "https://10.60.42.201:6442/arcgis/rest/services/上海文化产业分布/MapServer/0",
+      url: "https://localhost:6443/arcgis/rest/services/上海文化产业分布/MapServer/0",
       outFields: ["*"],
       popupTemplate: template
     });
