--- a/views/ecoCircle.ejs
+++ b/views/ecoCircle.ejs
@@ -253,7 +253,7 @@
             });
 
             var featureLayer = new FeatureLayer({
-                url: "https://10.60.42.201:6442/arcgis/rest/services/环同济经济圈/MapServer/1",
+                url: "https://localhost:6443/arcgis/rest/services/环同济经济圈/MapServer/1",
                 outFields: ["*"],
                 popupTemplate: template
             });
@@ -319,13 +319,13 @@
         });
 
         var featureLayer = new FeatureLayer({
-            url: "https://10.60.42.201:6442/arcgis/rest/services/环同济经济圈/MapServer/1",
+            url: "https://localhost:6443/arcgis/rest/services/环同济经济圈/MapServer/1",
             outFields: ["*"],
             popupTemplate: template
         });
 
 //        var featureLayer2 = new FeatureLayer({
-//            url: "https://10.60.42.201:6442/arcgis/rest/services/环同济经济圈/MapServer/0",
+//            url: "https://localhost:6443/arcgis/rest/services/环同济经济圈/MapServer/0",
 //            outFields: ["*"],
 //            popupTemplate: template
 //        });
