--- a/views/ecoCircleAddress.ejs
+++ b/views/ecoCircleAddress.ejs
@@ -89,7 +89,7 @@
             });
 
             var featureLayer = new FeatureLayer({
-                url: "https://10.60.42.201:6442/arcgis/rest/services/环同济经济圈园区选址/MapServer/0",
+                url: "https://localhost:6443/arcgis/rest/services/环同济经济圈园区选址/MapServer/0",
                 outFields: ["*"],
                 popupTemplate: template
             });
@@ -154,13 +154,13 @@
         });
 
         var featureLayer = new FeatureLayer({
-            url: "https://10.60.42.201:6442/arcgis/rest/services/环同济经济圈园区选址/MapServer/0",
+            url: "https://localhost:6443/arcgis/rest/services/环同济经济圈园区选址/MapServer/0",
             outFields: ["*"],
             popupTemplate: template
         });
 
 //        var featureLayer2 = new FeatureLayer({
-//            url: "https://10.60.42.201:6442/arcgis/rest/services/环同济经济圈/MapServer/0",
+//            url: "https://localhost:6443/arcgis/rest/services/环同济经济圈/MapServer/0",
 //            outFields: ["*"],
 //            popupTemplate: template
 //        });
