--- a/views/pageFour.ejs
+++ b/views/pageFour.ejs
@@ -34,7 +34,7 @@
 
     for (let i = 8; i <= 14; i++) {
         var featureLayer = new FeatureLayer({
-            url: "https://10.60.42.201:6442/arcgis/rest/services/ShanghaiMap/MapServer/"+i,
+            url: "https://localhost:6443/arcgis/rest/services/ShanghaiMap/MapServer/"+i,
             outFields: ["*"],
             popupTemplate: template,
         });
@@ -42,7 +42,7 @@
     }
 
     var featureLayer = new FeatureLayer({
-        url: "https://10.60.42.201:6442/arcgis/rest/services/hot_line/MapServer/0"
+        url: "https://localhost:6443/arcgis/rest/services/hot_line/MapServer/0"
     });
 
     map.add(featureLayer);
