--- a/views/pageThree.ejs
+++ b/views/pageThree.ejs
@@ -400,7 +400,7 @@
           });
 
           var featureLayer = new FeatureLayer({
-              url: "https://10.60.42.201:6442/arcgis/rest/services/culture_poi/MapServer/1",
+              url: "https://localhost:6443/arcgis/rest/services/culture_poi/MapServer/1",
               outFields: ["*"],
               popupTemplate: template
           });
@@ -458,7 +458,7 @@
     });
 
     var featureLayer = new FeatureLayer({
-      url: "https://10.60.42.201:6442/arcgis/rest/services/culture_poi/MapServer/1",
+      url: "https://localhost:6443/arcgis/rest/services/culture_poi/MapServer/1",
       outFields: ["*"],
       popupTemplate: template
     });
