--- a/views/test.ejs
+++ b/views/test.ejs
@@ -125,7 +125,7 @@
             // Create FeatureLayer instance with popupTemplate
 
             var povLyr = new FeatureLayer({
-                url: "https://10.60.42.201:6442/arcgis/rest/services/NeighbourService/MapServer",
+                url: "https://localhost:6443/arcgis/rest/services/NeighbourService/MapServer",
                 outFields: ["*"],
                 popupTemplate: {
                     title: "{name}",
@@ -276,7 +276,7 @@
     // Create FeatureLayer instance with popupTemplate
 
     var povLyr = new FeatureLayer({
-      url: "https://10.60.42.201:6442/arcgis/rest/services/NeighbourService/MapServer",
+      url: "https://localhost:6443/arcgis/rest/services/NeighbourService/MapServer",
       outFields: ["*"],
       popupTemplate: {
         title: "{name}",
