--- a/views/ecoCircleAddress.ejs
+++ b/views/ecoCircleAddress.ejs
@@ -11,7 +11,7 @@
     <span>寻址模型：</span>
     <span>MaxZi = Di / Pi</span>
     <span>Di 越大意味着该区域的交通情况越良好，越小意为着该地区的房价越低，越适合作为创业园区,因此求解模型即是求最小的Z值。</span>
-    <div class="selectAddress" style="right:720px;margin:0">
+    <div class="selectAddress" style="margin:0">
         <span class="placeholder">底图选择</span>
         <ul>
             <li value="oceans">oceans</li>
