--- a/views/index.ejs
+++ b/views/index.ejs
@@ -92,13 +92,13 @@
                         </li>
                     </ul>
                 </div>
-                <div class="item" onmouseover="activeMsg(7)" onmouseout="removeActiveId()" onclick="changePage(7)">
-                    <img src="/images/more.svg" alt="">
-                    <p>热点区域分析</p>
-                    <div class="aside" id="msg-seven">
-                        <span>热点区域分析</span>
-                    </div>
-                </div>
+                <!--<div class="item" onmouseover="activeMsg(7)" onmouseout="removeActiveId()" onclick="changePage(7)">-->
+                    <!--<img src="/images/more.svg" alt="">-->
+                    <!--<p>热点区域分析</p>-->
+                    <!--<div class="aside" id="msg-seven">-->
+                        <!--<span>热点区域分析</span>-->
+                    <!--</div>-->
+                <!--</div>-->
                 <div class="item" onmouseover="activeMsg(8)" onmouseout="removeActiveId()" onclick="changePage(8)">
                     <img src="/images/more.svg" alt="">
                     <p>最短路计算</p>
