--- a/views/pageEight.ejs
+++ b/views/pageEight.ejs
@@ -1,5 +1,5 @@
 <div class="pageEight container active">
-    <div class="selectEight" style="right:720px;margin:0">
+    <div class="selectEight" style="margin:0">
         <span class="placeholder">底图选择</span>
         <ul>
             <li value="oceans">oceans</li>
