--- a/views/pageFour.ejs
+++ b/views/pageFour.ejs
@@ -68,8 +68,9 @@
     .pageFour.container > h2 {
         align-self: flex-start;
         color: #0088f5;
-        font-size: 1.2em;
-        margin: 40px;
+        font-size: 5em;
+        margin: 20px;
+        text-indent:30px;
     }
 
     .pageFour.container.active {
