--- a/views/pageTwo.ejs
+++ b/views/pageTwo.ejs
@@ -1,5 +1,5 @@
 <div class="pageTwo container active">
-    <div class="selectTwo" style="right:720px;margin:0">
+    <div class="selectTwo" style="margin:0">
         <span class="placeholder">底图选择</span>
         <ul>
             <li value="oceans">oceans</li>
