--- a/views/test.ejs
+++ b/views/test.ejs
@@ -50,7 +50,7 @@
 </head>
 
 <body class="claro">
-<div class="selecttest" style="right:720px;margin:0">
+<div class="selecttest" style="margin:0">
     <span class="placeholder">底图选择</span>
     <ul>
         <li value="oceans">oceans</li>
