--- a/views/pageFive.ejs
+++ b/views/pageFive.ejs
@@ -412,8 +412,9 @@
     .pageFive.container > h2 {
         align-self: flex-start;
         color: #0088f5;
-        font-size: 1.2em;
-        margin: 40px;
+        font-size: 5em;
+        margin: 20px;
+        text-indent:30px;
     }
 
     .pageFive.container.active {
