--- a/views/pageHot.ejs
+++ b/views/pageHot.ejs
@@ -1,6 +1,6 @@
 <div class="pageHot container active">
     <h2>文化产业在各个区的热点</h2>
-    <div class="selectHout" style="right:720px;margin:0">
+    <div class="selectHout" style="margin:0">
         <span class="placeholder">底图选择</span>
         <ul>
             <li value="oceans">oceans</li>
@@ -193,8 +193,9 @@
     .pageHot.container > h2 {
         align-self: flex-start;
         color: #0088f5;
-        font-size: 1.2em;
-        margin: 40px;
+        font-size: 5em;
+        margin: 20px;
+        text-indent:30px;
     }
 
     .pageHot.container.active {
