--- a/views/pageThree.ejs
+++ b/views/pageThree.ejs
@@ -1,5 +1,5 @@
 <div class="pageThree container active">
-    <div class="selectThree" style="right:720px;margin:0">
+    <div class="selectThree" style="margin:0">
         <span class="placeholder">底图选择</span>
         <ul>
             <li value="oceans">oceans</li>
