--- a/views/pageAnylysis.ejs
+++ b/views/pageAnylysis.ejs
@@ -208,7 +208,7 @@
 </head>
 
 <body class="tundra">
-<div class="selectAnylysis" style="right:720px;margin:0">
+<div class="selectAnylysis" style=";margin:0">
     <span class="placeholder">底图选择</span>
     <ul>
         <li value="oceans">oceans</li>
