--- a/views/pageHot.ejs
+++ b/views/pageHot.ejs
@@ -1,6 +1,6 @@
 <div class="pageHot container active">
     <h2>文化产业在各个区的热点</h2>
-    <div class="selectHout" style="right:720px;margin:0">
+    <div class="selectHout" style=";margin:0">
         <span class="placeholder">底图选择</span>
         <ul>
             <li value="oceans">oceans</li>
@@ -93,7 +93,7 @@
             });
 
             var featureLayer = new FeatureLayer({
-                url: "https://10.60.42.201:6442/arcgis/rest/services/文化产业热点/MapServer/0",
+                url: "https://10.60.42.201:6442/arcgis/rest/services/文化产业热点区域/MapServer/0",
                 outFields: ["*"],
                 popupTemplate: template
             });
@@ -163,7 +163,7 @@
     });
 
     var featureLayer = new FeatureLayer({
-      url: "https://10.60.42.201:6442/arcgis/rest/services/文化产业热点/MapServer/0",
+      url: "https://10.60.42.201:6442/arcgis/rest/services/文化产业热点区域/MapServer/0",
       outFields: ["*"],
       popupTemplate: template
     });
